fixed launchSettings.json; updated PDFsharp version

--- a/src/OCSoft.PdfAnalyser.Service/OCSoft.PdfAnalyser.Service.csproj
+++ b/src/OCSoft.PdfAnalyser.Service/OCSoft.PdfAnalyser.Service.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="BitMiracle.Docotic.Pdf" Version="5.10.9957" />
     <PackageReference Include="itext7" Version="7.1.8" />
     <PackageReference Include="OCSoft.Common" Version="0.1.0" />
-    <PackageReference Include="PdfSharp" Version="1.50.5147" />
+    <PackageReference Include="PDFsharpNetStandard2" Version="1.51.4845" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
     <PackageReference Include="YamlDotNet" Version="8.0.0" />
   </ItemGroup>
