--- a/src/OCSoft.PdfAnalyser/Properties/launchSettings.json
+++ b/src/OCSoft.PdfAnalyser/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "OCSoft.PdfAnalyser": {
       "commandName": "Project",
-      "commandLineArgs": "\"..\\..\\samples\\debug.yaml\""
+      "commandLineArgs": "\"$(SolutionDir)/../samples/statements.yad\""
     }
   }
 }
