--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,3 +38,23 @@ jobs:
       with:
         name: PdfAnalyser
         path: dist/net8.0
+        
+  release:
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: PdfAnalyser
+          path: dist/net8.0
+
+      - name: Upload artifacts to GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/net8.0/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
